#
# $Id: Makefile.am 52896 2013-10-27 17:15:39Z gerald $
#
SUBDIRS = macosx rpm svr4 nsis

MAINTAINERCLEANFILES = \
	Makefile.in

EXTRA_DIST = \
	Makefile.nmake				\
	macosx/Info.plist.in		\
	ws-manifest.pl				\
	portableapps/win32/Installer.nsi		\
	portableapps/win32/WiresharkPortable.tmpl	\
	portableapps/win32/WiresharkPortable.nsi	\
	portableapps/win32/appinfo.tmpl			\
	portableapps/win32/installer.ini		\
	portableapps/win32/Makefile.nmake		\
	portableapps/win32/makenmake.pl			\
	portableapps/win32/readme.txt

